Updating some styling and content

--- a/_content/1-work/2014-01-02-1841-atlas.md
+++ b/_content/1-work/2014-01-02-1841-atlas.md
@@ -25,9 +25,17 @@ largethumbnail: >
 ---
 <h4>Atlas.md is a new EMR (electronic medical record) web application built by an awesome team at <a href="http://www.entermotion.com">Entermotion</a>, and I was assigned with the front-end work for the sales site.</h4>
 <p>
-	   The design team came up with a great layout the really highlighted the app's many features, and  it was my job to make their design look and function great, wherever and however it was viewed.
+	      The design team came up with a great layout that really highlights the app's many features, and  it was my job to make their design look and function great, wherever and however it was viewed.
 </p>
 <p>
-	   The design called for some very specific layouts for each section, in order to call attention to various features and aspects of the app, so coding the site responsively was a challenge - but I came up with some great ways to handle the flow of the layout no matter what size screen it was viewed on.<br>
-	 <a href="http://www.entermotion.com"></a>
+	      The design called for some very specific layouts for each section, in order to call attention to various features and aspects of the app, so coding the site responsively was a challenge - but I came up with some great ways to handle the flow of the layout no matter what size screen it was viewed on.
+</p>
+<p>
+	<img src="/_themes/mattsoria/img/work/atlasmd-screenshot2.jpg" alt="">
+</p>
+<p>
+	<img src="/_themes/mattsoria/img/work/atlasmd-screenshot1.jpg" alt="">
+</p>
+<p>
+	<img src="/_themes/mattsoria/img/work/atlasmd-screenshot3.jpg" alt="">
 </p>
