--- a/_content/1-work/2014-01-12-1953-agsc.md
+++ b/_content/1-work/2014-01-12-1953-agsc.md
@@ -29,19 +29,17 @@ largethumbnail: >
 ---
 <h4>The <a href="http://www.appalachianglobalservicecorps.org">Appalachian Global Service Corps</a>, a non-profit organization based in Kentucky, asked me to create a logo for them to help with their identity and fundraising.</h4>
 <p style="text-align: center;">
-	<img src="/_themes/mattsoria/img/work/agsc_logos.jpg">
+	 <img src="/_themes/mattsoria/img/work/agsc_logos.jpg">
 </p>
 <p>
-	       I created a composition that highlighted some key characteristics and values of the organization, like its connection to the Appalachian Mountains, and it's mission to help in both physical and educational capacities. I also created some variations of the mark to be used in various scenarios.
+	          I created a composition that highlighted some key characteristics and values of the organization, like its connection to the Appalachian Mountains, and it's mission to help in both physical and educational capacities. I also created some variations of the mark to be used in various scenarios.
 </p>
-<p class="grid">
+<p class="grid_item one-third-left">
+	 <img src="/_themes/mattsoria/img/work/logo_borderless_green.png">
 </p>
-<p class="one-third-left">
-	<img src="/_themes/mattsoria/img/work/logo_borderless_green.png">
+<p class="grid_item one-third-left">
+	 <img src="/_themes/mattsoria/img/work/icon_green.png">
 </p>
-<p class="one-third-left">
-	<img src="/_themes/mattsoria/img/work/icon_green.png">
-</p>
-<p class="one-third-right">
-	<img src="/_themes/mattsoria/img/work/icon_2_green.png">
+<p class="grid_item one-third-right">
+	 <img src="/_themes/mattsoria/img/work/icon_2_green.png">
 </p>
