Removing unused icons, moving favicons to root, updating tao.js, adding 404 page template

--- a/_content/404.md
+++ b/_content/404.md
@@ -1,4 +1,6 @@
 ---
-title: 404 Uh oh...
+title: fourohfour
+_template: 404
 ---
-Either this page doesn't exist anymore, someone mistyped the URL, or you were just being silly. Try going back [home](/).
+#Uh oh dude...
+##Either this page doesn't exist anymore,<br />someone mistyped the URL,<br />or you were just being silly.<br />Try going back [home](/).
