Pushing some new content to work page, a lot of overall style tweaks, fixes to work page grid, adjustments to work project pages

--- a/_content/1-work/2014-01-01-2032-ryan-duggan.md
+++ b/_content/1-work/2014-01-01-2032-ryan-duggan.md
@@ -29,23 +29,39 @@ siteurl: http://www.ryanduggan.com
 thumbnail: >
   /_themes/mattsoria/img/work/ryan-duggan.jpg
 largethumbnail: >
-  /_themes/mattsoria/img/work/ryan-duggan-screen-large.jpg
-features: ""
+  /_themes/mattsoria/img/work/ryan-duggan-2x.jpg
+features: |
+  <ul>
+  	<li>HTML</li>
+  	<li>CSS</li>
+  	<li>jQuery</li>
+  	<li>Custom Wordpress Theme</li>
+  	<li>Responsive</li>
+  </ul>
 about: |
   <p>
-  	 Ryan Duggan is an awesome artist, and a great dude, known well in Chicago for his concert posters, hand-lettering, and his skateboard company <em>Hated</em>. Ryan is always working like a mad man, and his portfolio of commissions and artwork is constantly growing. His last website was made up of static HTML files that he would have to hack around every time he wanted to change or add something new. He hired me to help create a new site that was easy to update and maintain, looked great, and was accessible on phones and other small-screen devices for the various expos and festivals that he sells his prints at.
+  	  Ryan Duggan is an awesome artist, and a great dude, known well in Chicago for his concert posters, hand-lettering, and his skateboard company <em>Hated</em>. Ryan is always working like a mad man, and his portfolio of commissions and artwork is constantly growing. His last website was made up of static HTML files that he would have to hack around every time he wanted to change or add something new. He hired me to help create a new site that was easy to update and maintain, looked great, and was accessible on phones and other small-screen devices for the various expos and festivals that he sells his prints at.
   </p>
 role: |
   <p>
-  	 I worked with Ryan to come up with a simple design that focused on showcasing his portfolio of work, while maintaining his signature style and personality. I built out a custom Wordpress theme that allowed Ryan the ability to add new work easily, and have the content and information fit in seamlessly with the design. I created a responsive layout that presents the work perfectly no matter what screen size it's view on. In order to help improve site performance with the large amount of images displayed on the site, I implemented a way to automatically losslessly compress any new images Ryan adds.
+  	  I worked with Ryan to come up with a simple design that focused on showcasing his portfolio of work, while maintaining his signature style and personality. I built out a custom Wordpress theme that allowed Ryan the ability to add new work easily, and have the content and information fit in seamlessly with the design. I created a responsive layout that presents the work perfectly no matter what screen size it's view on. In order to help improve site performance with the large amount of images displayed on the site, I implemented a way to automatically losslessly compress any new images Ryan adds.
   </p>
+seokeywords: >
+  web development, front-end development,
+  frontend, HTML, CSS, responsive, coding,
+  wordpress, ryan duggan, chicago
+seodescription: >
+  Chicago Screen Printer and Artist Ryan
+  Duggan needed a new website that fit his
+  style, and was easy to update with his
+  rapidly-growing portfolio.
 ---
 <p>
-	 <img src="/_themes/mattsoria/img/work/ryanduggan-screenshot1.jpg" alt="">
+	<img src="/_themes/mattsoria/img/work/ryanduggan-screenshot1.jpg" alt="">
 </p>
 <p>
-	 <img src="/_themes/mattsoria/img/work/ryanduggan-screenshot2.jpg" alt="">
+	<img src="/_themes/mattsoria/img/work/ryanduggan-screenshot2.jpg" alt="">
 </p>
 <p>
-	 <img src="/_themes/mattsoria/img/work/ryanduggan-screenshot3.jpg" alt="">
+	<img src="/_themes/mattsoria/img/work/ryanduggan-screenshot3.jpg" alt="">
 </p>
